# OZCoding

./: .gitignore
Bootstrap_Project/AdminPage/: AdminPage.css  AdminPage.html  AdminPage.js
Bootstrap_Project/Join/: darkmode.css  darkmode.js  index.html  join.css  join.html  join.js
DataAnalysis/: MachineLearning.ipynb
DataAnalysis/assignment/: 1day.ipynb
DataBase/db_assignment/: chapter01_06.ipynb  chapter07_13.ipynb  chapter14_21.sql  chapter28_39.py  fish_shaped_bun_shop.sql
Django_assignment/3일차 과제/: orm.ipynb
Django_assignment/membership/: db.sqlite3  pyproject.toml
Django_assignment/membership/accounts/: admin.py  models.py
Django_assignment/membership/common/: models.py
Django_assignment/membership/config/: settings.py
Django_assignment/membership_project/: .gitignore  db.sqlite3  pyproject.toml
Django_kim/: db.sqlite3  pyproject.toml
Django_kim/boards/: admin.py  models.py
Django_kim/common/: models.py
Django_kim/config/: settings.py  urls.py
Django_kim/feeds/: urls.py  views.py
Django_kim/users/: admin.py  models.py
Flask/chapter33_practice_blog/: app.py  posts_routes.py
Flask/chapter42_user_management/: app.py
Flask/chapter43_insta_restapi/: app.py  user_model.py  user_routes.py
Flask/chapter44_todo_app/: models.py
Flask/orm_22/: app.py  models.py
Git_Study/1일차/: back.yaml  front.yaml
Git_Study/2일차/: .gitignore
JAVASCRIPT_STUDY/1회차/: 10-user.html
JAVASCRIPT_STUDY/2회차/: 17-monster.html
JAVASCRIPT_STUDY/3회차/: 22-join.html  (+2 more)
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
fastApiProject/: docker-compose.yml
(+172 files in other folders)
