[tool.poetry]
name = "membership-project"
version = "0.1.0"
description = "Django 2nd assignment"
authors = ["hyo <umdoongs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
